--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,41 @@
 /dataSources.local.xml
 
 # Ignore node_modules
-SLEUTH/node_modules/
 node_modules/
+
+# Ignore Subfolder files
+SLEUTH/.DS_Store
+SLEUTH/node_modules/
+SLEUTH/.gitkeep
+SLEUTH/package-lock.json
+SLEUTH/package-lock.json
 
 # Ignore logs
 *.log
 
 # Ignore macOS system files
-SLEUTH/.DS_Store/
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# iCloud generated files
+*.icloud
 
 # Ignore IDE-specific files
 .idea/
